--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
     },
     "require-dev": {
         "scabbiafw/scabbia2-tasks": "*",
-        "scabbiafw/scabbia2-testing": "*"
+        "scabbiafw/scabbia2-testing": "*",
+        "squizlabs/php_codesniffer": "2.*"
     },
     "suggest": {
     },
